modified image index file

--- a/Image/index.html
+++ b/Image/index.html
@@ -1,5 +1,6 @@
 <head>
     <body>
-        <img src="nature.jpeg" alt="nature" width="100px" height="100px">
+        <img src="nature.jpeg" alt="nature" width="100px" height="100px"> <!--Self closing tag 
+         easy to remember since it not help to display text by user.-->
     </body>
 </head>
