forgot to add html tag and <a> tag

--- a/Image/index.html
+++ b/Image/index.html
@@ -1,6 +1,9 @@
-<head>
-    <body>
-        <img src="nature.jpeg" alt="nature" width="100px" height="100px"> <!--Self closing tag 
-         easy to remember since it not help to display text by user.-->
-    </body>
+<html>
+    <head>
+        <body>
+            <img src="nature.jpeg" alt="nature" width="100px" height="100px"> <!--Self closing tag 
+            easy to remember since it not help to display text by user.-->
+            <a href="../Headers and paragraph/index.html">Header</a>
+        </body>
 </head>
+</html>
